--- a/SysManager.Admin/SysManager.API.Admin.csproj
+++ b/SysManager.Admin/SysManager.API.Admin.csproj
@@ -16,4 +16,7 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+  </ItemGroup>
 </Project>
