--- a/SysManager.Application/SysManager.Application.csproj
+++ b/SysManager.Application/SysManager.Application.csproj
@@ -39,4 +39,7 @@
     <Folder Include="Helpers\" />
     <Folder Include="Validators\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+  </ItemGroup>
 </Project>
