--- a/SysManager.Application/SysManager.Application.csproj
+++ b/SysManager.Application/SysManager.Application.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="FluentValidation" Version="11.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="MySql.Data" Version="8.0.25" />
   </ItemGroup>
