Category e Product repo

--- a/SysManager.Application/SysManager.Application.csproj
+++ b/SysManager.Application/SysManager.Application.csproj
@@ -9,10 +9,10 @@
     <None Remove="Contracts\" />
     <None Remove="Contracts\Users\" />
     <None Remove="Contracts\Products\" />
-    <None Remove="Contracts\Users\Request\" />
-    <None Remove="Contracts\Users\Response\" />
-    <None Remove="Contracts\Products\Request\" />
-    <None Remove="Contracts\Products\Response\" />
+    <None Remove="Contracts\User\Request\" />
+    <None Remove="Contracts\User\Response\" />
+    <None Remove="Contracts\Product\Request\" />
+    <None Remove="Contracts\Product\Response\" />
     <None Remove="Data\" />
     <None Remove="Data\MySql\" />
     <None Remove="Data\MySql\Entities\" />
@@ -23,17 +23,9 @@
     <None Remove="Validators\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Contracts\" />
-    <Folder Include="Contracts\Users\" />
-    <Folder Include="Contracts\Products\" />
-    <Folder Include="Contracts\Users\Request\" />
-    <Folder Include="Contracts\Users\Response\" />
-    <Folder Include="Contracts\Products\Request\" />
-    <Folder Include="Contracts\Products\Response\" />
-    <Folder Include="Data\" />
-    <Folder Include="Data\MySql\" />
-    <Folder Include="Data\MySql\Entities\" />
-    <Folder Include="Data\MySql\Repositories\" />
+    <Folder Include="Contracts\User\" />
+    <Folder Include="Contracts\Product\" />
+    <Folder Include="Contracts\Product\Response\" />
     <Folder Include="Errors\" />
     <Folder Include="Services\" />
     <Folder Include="Helpers\" />
