--- a/SysManager.Admin/appsettings.json
+++ b/SysManager.Admin/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=sysmanager;Uid=root;Pwd= ;"
+    "DefaultConnection": "Server=sql.freedb.tech;Port=3306;Database=freedb_sysmanagerdb;Uid=freedb_assis;Pwd=xHC@t4?QNBh&cap;"
   },
   "Logging": {
     "LogLevel": {
