--- a/SysManager.Test/SysManager.Test.csproj
+++ b/SysManager.Test/SysManager.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
+	<IsPublishable>false</IsPublishable >
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
